--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Open in VLC media player",
-  "description": "Adds a context menu item to send audio/video streams directly to VLC media player",
+  "name": "Open in VLC™ media player",
+  "description": "Adds a context menu to send audio and video streams directly to the well-known VLC™ media player",
   "author": "Andy Portmen",
-  "version": "0.1.8",
+  "version": "0.2.0",
   "manifest_version": 2,
   "permissions": [
     "storage",
