--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Open in VLC™ media player",
-  "description": "Adds a context menu to send audio and video streams directly to the well-known VLC™ media player",
-  "author": "Andy Portmen",
-  "version": "0.2.2",
+  "description": "__MSG_description__",
+  "default_locale": "en",
+  "version": "0.2.6",
   "manifest_version": 2,
   "permissions": [
     "storage",
@@ -23,9 +23,7 @@
   "homepage_url": "https://add0n.com/open-in-vlc.html",
   "icons": {
     "16": "data/icons/16.png",
-    "19": "data/icons/19.png",
     "32": "data/icons/32.png",
-    "38": "data/icons/38.png",
     "48": "data/icons/48.png",
     "64": "data/icons/64.png",
     "128": "data/icons/128.png",
@@ -33,14 +31,10 @@
     "512": "data/icons/512.png"
   },
   "options_ui": {
-    "page": "data/options/index.html",
-    "chrome_style": true
+    "page": "data/options/index.html"
   },
   "page_action": {
-    "default_icon": {
-      "16": "data/icons/16.png",
-      "32": "data/icons/32.png"
-    }
+    "default_title": "__MSG_page_action__"
   },
   "web_accessible_resources": [
     "/data/inject/*"
