--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Open in VLC™ media player",
-  "description": "Adds a context menu to send audio and video streams directly to the well-known VLC™ media player",
-  "author": "Andy Portmen",
-  "version": "0.2.2",
+  "description": "__MSG_description__",
+  "default_locale": "en",
+  "version": "0.2.4",
   "manifest_version": 2,
   "permissions": [
     "tabs",
@@ -39,10 +39,7 @@
     "chrome_style": true
   },
   "page_action": {
-    "default_icon": {
-      "16": "data/icons/16.png",
-      "32": "data/icons/32.png"
-    }
+    "default_title": "__MSG_page_action__"
   },
   "web_accessible_resources": [
     "/data/inject/*"
