--- a/v3/manifest.json
+++ b/v3/manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 2,
   "name": "Open in VLC™ media player",
   "description": "__MSG_description__",
   "default_locale": "en",
@@ -9,16 +9,18 @@
     "contextMenus",
     "nativeMessaging",
     "webRequest",
-    "scripting"
-  ],
-  "host_permissions": [
     "<all_urls>"
   ],
   "optional_permissions": [
     "downloads"
   ],
   "background": {
-    "service_worker": "worker.js"
+    "scripts": [
+      "native.js",
+      "context.js",
+      "v2.js",
+      "worker.js"
+    ]
   },
   "homepage_url": "https://add0n.com/open-in-vlc.html",
   "icons": {
@@ -33,13 +35,12 @@
   "options_ui": {
     "page": "data/options/index.html"
   },
-  "action": {
+  "browser_action": {
     "default_title": "__MSG_page_action__"
   },
-  "web_accessible_resources": [{
-    "resources": ["/data/inject/*"],
-    "matches": ["*://*/*"]
-  }],
+  "web_accessible_resources": [
+    "/data/inject/*"
+  ],
   "commands": {
     "_execute_action": {
       "description": "Press the action button"
