Adds basic support for PotPlayer and QMPlay2

--- a/v3/manifest.json
+++ b/v3/manifest.json
@@ -19,7 +19,7 @@
   ],
   "background": {
     "service_worker": "worker.js",
-    "scripts": ["const.js", "native.js", "context.js", "worker.js"]
+    "scripts": ["const.js", "native.js", "context.js", "open.js", "worker.js"]
   },
   "homepage_url": "https://webextension.org/listing/open-in-vlc.html",
   "icons": {
