--- a/v3/manifest.json
+++ b/v3/manifest.json
@@ -18,8 +18,7 @@
     "downloads"
   ],
   "background": {
-    "service_worker": "worker.js",
-    "scripts": ["const.js", "native.js", "context.js", "open.js", "worker.js"]
+    "service_worker": "worker.js"
   },
   "homepage_url": "https://webextension.org/listing/open-in-vlc.html",
   "icons": {
@@ -44,11 +43,5 @@
   }],
   "commands": {
     "_execute_action": {}
-  },
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "{6b954d17-d17c-4a19-8fe6-ee8052a562d6}",
-      "strict_min_version": "115.0"
-    }
   }
 }
